<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_margin="5dp"
    card_view:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/timeTextViewRunTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxWidth="1sp"
                android:textSize="20sp"
                android:text="@string/timeLabel"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/distanceTextViewRunTite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="1sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/distanceLabel"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/paceTextViewRunTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxWidth="1sp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/splitLabel"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeTextViewRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxWidth="1sp"
                android:gravity="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/distanceTextViewRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxWidth="1sp"
                android:gravity="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/paceTextViewRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="1sp"
                android:text=""
                android:gravity="center"
                android:textSize="20sp"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/dateTextViewRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="testing"
            android:textSize="12sp"
            android:paddingTop="7sp"/>


    </LinearLayout>

</android.support.v7.widget.CardView>


